--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bcrypt-nodejs": "0.0.3",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "connect-history-api-fallback": "^1.6.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "gridfs-stream": "^1.1.1",
@@ -22,8 +23,9 @@
     "multer": "^1.4.2",
     "multer-gridfs-storage": "^4.0.2",
     "mysql2": "^2.1.0",
-    "nodemailer": "^6.4.6",
-    "sequelize": "^5.21.10"
+    "nodemailer": "^6.4.10",
+    "sequelize": "^5.21.10",
+    "serve-static": "^1.14.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
